jqm.sh now take attention to (somewhat) standard JAVA_OPTS env vars. If undef, we no longer depends on JVM default but JQM specific ones: -Xms160m -Xmx512m -XX:MaxPermSize=128m Close #110